--- a/.travis.yml
+++ b/.travis.yml
@@ -22,23 +22,31 @@ addons:
     branch_pattern: coverity_scan
 
 before_script:
+  # prepare depends
   - sudo apt-get update
   - sudo apt-get install mysql-server-5.5 mysql-client-5.5 libmysqlclient-dev mysql-source-5.5 libdbd-mysql-perl
+  # configure for make
   - ./autogen.sh
   - cp /usr/src/mysql/mysql-source-5.5.tar.gz .
   - tar -zxf mysql-source-5.5.tar.gz
   - ./configure --with-mysql-source=mysql-5.5/
   - make
   - sudo make install
+  # copy config files for mysql
   - sudo cp ./regtest/conf/hs.cnf /etc/mysql/conf.d/hs.cnf
-
+  # build HS perl plugins for regtests
   - cd ./perl-Net-HandlerSocket
   - perl Makefile.PL
   - make
   - sudo make install
+  # restart mysql servise to get changes
   - sudo service mysql restart
+  # debug is mysql get hs
   - mysql -e "SHOW PROCESSLIST;"
-  - cd ../regtest
+  # cd to root HS dir
+  - cd ../
+  # where is coverity send build
 
 script:
+  - cd ./regtest
   - make
