--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 
 compiler:
   - gcc
- 
+
 env:
   global:
    - ci_home=`pwd`
@@ -21,6 +21,8 @@ addons:
       - "./configure --with-mysql-source=$ci_home/mysql-5.5/"
     build_command: "make -j4"
     branch_pattern: coverity_scan
+    build_script_url: "https://raw.githubusercontent.com/daksheshvyas/MyHelloWorld/master/scan_script.sh"
+
 
 before_script:
   # prepare depends
